--- a/templates/error.html
+++ b/templates/error.html
@@ -9,12 +9,12 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="error-content text-center">
-                    <div class="title wow slideInDown" data-wow-delay="200ms" data-wow-duration="1500ms">Page not found</div>
+                    <div class="title wow slideInDown" data-wow-delay="200ms" data-wow-duration="1500ms">Sahifa Topilmadi</div>
                     <div class="big-title wow slideInRight" data-wow-delay="100ms" data-wow-duration="1500ms">404</div>
-                    <p class="wow slideInLeft" data-wow-delay="400ms" data-wow-duration="1500ms">Sorry we’re unable to find the page you are looking for, please<br> check the url and try again.</p>
+                    <p class="wow slideInLeft" data-wow-delay="400ms" data-wow-duration="1500ms">Kechirasiz Bu sahifa topilmadi <br> Manzilni Tekshirib Ko'ring.</p>
                     <div class="btns-box wow slideInUp" data-wow-delay="700ms" data-wow-duration="1500ms">
-                        <a class="btn-one" href="index.html">
-                            <span class="txt">Back to Home</span>
+                        <a class="btn-one" href="/">
+                            <span class="txt">Asosiy</span>
                         </a>
                     </div>
                 </div>    
@@ -25,40 +25,5 @@
 <!--End Error Page Area-->   
 
 
-<button class="scroll-top scroll-to-target" data-target="html">
-    <span class="icon-right-arrow-1"></span>
-</button> 
-
-
-
-<!-- search-popup -->
-<div id="search-popup" class="search-popup">
-    <div class="close-search"><i class="icon-close"></i></div>
-    <div class="popup-inner">
-        <div class="overlay-layer"></div>
-        <div class="search-form">
-            <form method="post" action="index.html">
-                <div class="form-group">
-                    <fieldset>
-                        <input type="search" class="form-control" name="search-input" value="" placeholder="Search Here" required >
-                        <input type="submit" value="Search Now!" class="theme-btn style-four">
-                    </fieldset>
-                </div>
-            </form>
-            <h3>Recent Search Keywords</h3>
-            <ul class="recent-searches">
-                <li><a href="index.html">Water Quality</a></li>
-                <li><a href="index.html">Mineral</a></li>
-                <li><a href="index.html">Bottle</a></li>
-                <li><a href="index.html">Safety</a></li>
-                <li><a href="index.html">Plan</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-<!-- search-popup end -->
-
-
-</div> 
 
 {% endblock content %}
