--- a/templates/contact.html
+++ b/templates/contact.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="text">
                         <h4>{% trans "Bizning Manzilimiz"%} </h4>
-                        <p>{{info.addres}}</p>
+                        <a href="https://maps.app.goo.gl/yxEUmxrG5BYuCBgXA"><p>{{info.addres}}</p></a>
                     </div>
                 </div>
             </div>
@@ -159,8 +159,8 @@
     <div class="container-fluid">
         <div class="contact-page-map-outer">
             <!--Map Canvas-->
-            <h1><a href="https://maps.app.goo.gl/ABdX5Ccut5vqfofs7">Go</a></h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193500.35955736946!2d72.06326706318917!3d40.73027413584741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bcebb9f4f42acb%3A0xce88aa6e2af1f2f9!2sAJ%20ALSKOM%20SK%20Andijon%20Filiali!5e0!3m2!1sen!2s!4v1722165070929!5m2!1sen!2s" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h1 style="text-align: center;">Yo'nalish Olish Uchun <a href="https://maps.app.goo.gl/yxEUmxrG5BYuCBgXA">Shuni</a>Ustiga Bosing</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2670.6152738880974!2d72.33038402193579!3d40.96841857503332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2s!4v1722999789978!5m2!1sen!2s" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 </section>
